--- a/Html/index.html
+++ b/Html/index.html
@@ -9,10 +9,204 @@
 </head>
 
 <body>
-
     <!-- Hello World -->
-    <span>Test</span>
+    <div id="headingsAreaID"></div>
+    <h1>I'm a Heading1</h1>
+    <h2>I'm a Heading2</h2>
+    <h3>I'm a Heading3</h3>
+    <h4>I'm a Heading4</h4>
+    <h5>I'm a Heading5</h5>
+    <h6>I'm a Heading6</h6>
 
+    <h2>Block vs inline</h2>
+    <p>I'm a block element</p>
+    <p>I'm another block element</p>
+    <span>I'm an inline element</span>
+    <span>I'm another inline element</span>
+
+    <h2>Order list</h2>
+    <ol type="1">
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+    </ol>
+
+    <ol type="A">
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+        <li>Item4</li>
+    </ol>
+
+    <ol type="a">
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+    </ol>
+
+    <ol type="I">
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+        <li>Item4</li>
+    </ol>
+
+    <ol type="i">
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+    </ol>
+
+    <h2>Order list with nesting lists</h2>
+
+    <ol type="A">
+        <li>Item 1</li>
+        <li>Item 2
+            <ol type="a">
+                <li>Item2.1</li>
+                <li>Item2.2</li>
+                <li>Item2.3</li>
+            </ol>
+        </li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ol>
+
+    <h2>Unorder lists</h2>
+
+    <ul type="circle">
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+    </ul>
+
+    <ul type="disc">
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+    </ul>
+
+    <ul type="square">
+        <li>Item1</li>
+        <li>Item2</li>
+        <li>Item3</li>
+    </ul>
+
+    <h2>Unorder list with nesting lists</h2>
+
+    <ul type="circle">
+        <li>Item 1</li>
+        <li>Item 2
+            <ul type="square">
+                <li>Item2.1</li>
+                <li>Item2.2</li>
+                <li>Item2.3</li>
+            </ul>
+        </li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ul>
+
+    <h2>Description list</h2>
+
+    <dl>
+        <dt>Item1 title</dt>
+        <dd>Item 1 is a...</dd>
+        <dt>Item2 title</dt>
+        <dd>Item 2 is a...</dd>
+        <dt>Item3 title</dt>
+        <dd>Item 3 is a...</dd>
+    </dl>
+
+    <h2>Text styling</h2>
+    <p>This is an <em>emphasized</em> text</p>
+    <br>
+    <p>This is a <strong>strong</strong> text</p>
+    <p>This is a <b>strong</b> text </p>
+    <p>This is an <i>italic</i> text </p>
+    <p>This is an <u>underline</u> text </p>
+
+    <h2>Anchor links</h2>
+    <hr>
+
+    <div>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/html" target="_blank">Go to MDN</a>
+    </div>
+    <div>
+        <a href="about-me.html">Go to about me</a>
+    </div>
+    <div>
+        <a href="Portofolio/portofolio.html">Go to portofolio</a>
+    </div>
+    <div>
+        <a href="#headingsAreaID">Go to top</a>
+    </div>
+    <div>
+        <a href="about-me.html#goBackButtonID">Go to about me - specified section</a>
+    </div>
+    <div>
+        <a href="../Resources/archive.zip">Download zip file</a>
+    </div>
+
+    <h2>Images</h2>
+    <img src="../Images/logo.png" width="200" alt="Substitute text">
+    <img src="https://static.vecteezy.com/system/resources/thumbnails/025/284/015/small_2x/close-up-growing-beautiful-forest-in-glass-ball-and-flying-butterflies-in-nature-outdoors-spring-season-concept-generative-ai-photo.jpg" height="200">
+
+    <h2>Tables</h2>
+    <table border="2">
+        <tr>
+            <td colspan="2">Cell 1,1</td>
+            <!-- <td>Cell 1,2</td> -->
+        </tr>
+        <tr>
+            <td rowspan="2">Cell 2,1</td>
+            <td>Cell 2,2</td>
+        </tr>
+        <tr>
+            <!-- <td>Cell 3,1</td> -->
+            <td>Cell 3,2</td>
+        </tr>
+    </table>
+
+    <h2>Forms</h2>
+
+    <form>
+        <input type="hidden" value="123456" />
+        <label for="username">Username:</label>
+        <input type="text" required name="username" placeholder="Enter your username...">
+        <label for="password">Password:</label>
+        <input type="password" required name="password">
+        <input type="submit" value="Login">
+        <input type="reset" value="Cancel">
+    </form>
+
+    <form>
+        <label for="username">Username: </label>
+        <input type="text" placeholder="Enter your username...">
+        <label for="comment">Comment:</label>
+        <textarea name="comment" cols="30" rows="5">Some text...</textarea>
+        <input type="submit" value="Add new comment">
+        <input type="reset" value="Cancel">
+    </form>
+
+    <form>
+        <label for="searchByType">Search by type: </label>
+        <select name="searchByType">
+            <option value="skoda">Skoda</option>
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="dacia">Dacia</option>
+        </select>
+        <label for="searchByColor">Search by color: </label>
+        <select multiple name="searchByColor">
+            <option value="black">Black</option>
+            <option value="green">Green</option>
+            <option value="white">White</option>
+            <option value="red">Red</option>
+        </select>
+        <input type="submit" value="Search">
+        <input type="reset" value="Cancel">
+    </form>
 </body>
 
 </html>
