--- a/JS_Basics/index.html
+++ b/JS_Basics/index.html
@@ -210,25 +210,25 @@
         //         throw new Error("Not known domain");
         // }
 
-        // var whileIndex = 100;
+        var whileIndex = 100;
 
-        // // while(whileIndex++ < 10) {
-        // while(whileIndex < 10) {
-        //     whileIndex++;
-        //     console.log(whileIndex);
-        //     // whileIndex++; //whileIndex = whileIndex + 1;
-        // }
+        // while(whileIndex++ < 10) {
+        while(whileIndex < 10) {
+            whileIndex++;
+            console.log(whileIndex);
+            // whileIndex++; //whileIndex = whileIndex + 1;
+        }
 
-        // do {
-        //     // console.log("Inside do");
-        //     whileIndex++;
-        //     console.log(whileIndex);
-        // } while (whileIndex < 10);
+        do {
+            // console.log("Inside do");
+            whileIndex++;
+            console.log(whileIndex);
+        } while (whileIndex < 10);
 
-        // for(var index = 0; index < 10; index++) {
-        //     var newIndex = index + 1;
-        //     console.log(newIndex);
-        // }
+        for(var index = 0; index < 10; index++) {
+            var newIndex = index + 1;
+            console.log(newIndex);
+        }
 
     </script>
 </head>
